<resources>
    <string name="app_name">businesscard</string>
    <string name="nathan">Nathan Wallace</string>
    <string name="profession">Android Developer</string>
    <string name="contact">Contact</string>
    <string name="email">ncw232@gmail.com</string>
    <string name="phone">804.501.9023</string>
    <string name="edit_button">Edit</string>
    <string name="name_field">Name</string>
    <string name="name_label">Name</string>
    <string name="profession_label">Profession</string>
    <string name="email_label">Email</string>
    <string name="phone_label">Phone</string>
    <string name="save_button">Save</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
